bk_ida/gccida/c3/duplicate_loop_exit_test
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/jump.c:842:64: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( unsigned __int16)**( _DWORD **)&insna[2] == 47 ? ( rtx)insna[2] : single_set_2( insna, *( rtx *)&insna[2]); 
                                                               ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/jump.c:868:46: error: use of undeclared identifier 'machine_mode'
reg_map[reg->fld[0].rtuint] = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg)); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/jump.c:868:61: error: expected expression
reg_map[reg->fld[0].rtuint] = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg)); 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/jump.c:886:54: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = insnb[3].fld[0].rtx; link; link = ( rtx)link[1] ) 
                                                     ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/jump.c:893:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)link), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/jump.c:893:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)link), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/jump.c:899:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)link), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/jump.c:899:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)link), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/jump.c:923:29: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
label = (  struct rtx_def *)copy[4]; 
                            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/jump.c:931:43: error: use of undeclared identifier 'TAKEN_0'; did you mean 'TAKEN'?
predict_insn_def( copy, PRED_LOOP_HEADER, TAKEN_0); 
                                          ^~~~~~~
                                          TAKEN
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/predict.h:34:4: note: 'TAKEN' declared here
   TAKEN
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/jump.c:936:43: error: use of undeclared identifier 'NOT_TAKEN_0'; did you mean 'NOT_TAKEN'?
predict_insn_def( copy, PRED_LOOP_HEADER, NOT_TAKEN_0); 
                                          ^~~~~~~~~~~
                                          NOT_TAKEN
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/predict.h:33:4: note: 'NOT_TAKEN' declared here
   NOT_TAKEN,
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/jump.c:948:22: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( _QWORD *)&copy[2] = insnb[2]; 
                     ^ ~~~~~~~~
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/duplicate_loop_exit_test/src/obj/jump.o] Error 1
